--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
               <i class="fa-li fa fa-check text-warning"></i>
               Responsible
               <i class=" fa fa-check text-warning"></i>
-              Motivated in learning new technolgies
+              Motivated in learning new technologies
               <i class=" fa fa-check text-warning"></i>
               Python enthusiast
 
