Add new archievements

--- a/index.html
+++ b/index.html
@@ -291,14 +291,20 @@
               <i class="fa-li fa fa-trophy text-warning"></i>
               Gained the status of commiter in <a href="https://hg.tryton.org"> Tryton</a> </li>
             <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              Winner of the Origin studio challenge in the <a href="https://lleidahack.github.io/">Lleida Hackaton</a></li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              Mention in the <a href="http://www.udl.es/ca/">UDL</a> "Clean code" contest in the Lleida hackaton.</li>
+            <li>
               <i class="fa-li fa fa-tachometer text-warning"></i>
               Developed Torrebesses Library <a href="http://www.torrebesses.cat/biblioteca/">Website</a>  </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Co-founder of <a href="https://deletos.es"> Deletos</a> </li>
+              Co-founder and CTO of <a href="https://deletos.es"> Deletos</a> </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Backend developing in  <a href="https://deletos.es"> Deletos</a> </li>
+              Backend developing in <a href="https://deletos.es"> Deletos</a> (An api with FLASK)</li>
             <br>
             <li>
               <i class="fa-li fa fa-language text-warning"></i>
