Add missing icons

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
           <div class="subheading mb-5">C:/ Portal Nº20 · Alguaire (Lleida) 25125  ·
             <a href="mailto:xavier19966@gmail.com">xavier19966@gmail.com</a>
           </div>
-          <p class="mb-5">I am experienced in php framework development, a person who enjoys learning new frameworks and new ways of development and an enthusiast of python.</p>
+          <p class="mb-5">I am a person who enjoys learning new languages, frameworks and new programming ways. I would say that my main language is Python but I'm also used to JavaScript and PHP. In python I've developed so many personal
+          projects, starting by a Telegram bot and ending with an API in flask. As a programmer I always try to write clean and meaningfull code (Using pep8 in python, f.e). If you want to know more about me just scroll down!</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/xcodinas/">
@@ -183,16 +184,16 @@
 
           <div class="row">
             <div class="col-md-6">
-              <div class="skill">
-                <p><i class="devicons devicons-php"> </i> PHP </p>
-                <div class="skill-bar skill1 wow slideInLeft animated" style="width: 80%">
-                  <span class="skill-count1">80%</span>
-                </div>
-              </div>
               <div class="skill" >
                 <p><i class="devicons devicons-python"></i> Python</p>
                 <div class="skill-bar skill2 wow slideInLeft animated" style="width: 85%">
                   <span class="skill-count2">85%</span>
+                </div>
+              </div>
+              <div class="skill">
+                <p><i class="devicons devicons-php"> </i> PHP </p>
+                <div class="skill-bar skill1 wow slideInLeft animated" style="width: 80%">
+                  <span class="skill-count1">80%</span>
                 </div>
               </div>
               <div class="skill">
@@ -228,9 +229,15 @@
             </div>
             <div class="col-md-6">
               <div class="skill">
+                <p><i class="devicons devicons-python"></i> Flask</p>
+                <div class="skill-bar skill1 wow slideInLeft animated" style="width: 80%">
+                  <span class="skill-count1">80%</span>
+                </div>
+              </div>
+              <div class="skill">
                 <p><i class="devicons devicons-codeigniter"></i> CodeIgniter</p>
-                <div class="skill-bar skill1 wow slideInLeft animated" style="width: 90%">
-                  <span class="skill-count1">90%</span>
+                <div class="skill-bar skill1 wow slideInLeft animated" style="width: 80%">
+                  <span class="skill-count1">80%</span>
                 </div>
               </div>
               <div class="skill">
@@ -240,7 +247,13 @@
                 </div>
               </div>
               <div class="skill">
-                <p> VueJS</p>
+                  <p> <i class="devicons devicons-javascript"></i>VueJS</p>
+                <div class="skill-bar skill1 wow slideInLeft animated" style="width: 70%">
+                  <span class="skill-count1">70%</span>
+                </div>
+              </div>
+              <div  class="skill">
+                <p><i class="devicons devicons-database"></i> PostgreSQL</p>
                 <div class="skill-bar skill1 wow slideInLeft animated" style="width: 70%">
                   <span class="skill-count1">70%</span>
                 </div>
