--- a/index.html
+++ b/index.html
@@ -96,6 +96,20 @@
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
 
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Python Programmer</h3>
+              <div class="subheading mb-3">Opentrends</div>
+              <p>Developing REST APIS (Flask + Flask-Restful)
+Using PostgreSQL as database engine
+Developing tests with Pytest
+Using GIT as control version.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">November 2021 - Present</span>
+            </div>
+          </div>
+          
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Programmer</h3>
@@ -104,7 +118,7 @@
               We are also using GIT, a custom path workflow and automated tests with a deployment when the build success. </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">June 2016 - Present</span>
+              <span class="text-primary">June 2016 - November 2021</span>
             </div>
           </div>
 
