--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Python Programmer</h3>
               <div class="subheading mb-3">Opentrends</div>
-              <p>Developing REST APIS (Flask + Flask-Restful)
-Using PostgreSQL as database engine
-Developing tests with Pytest
+	      <p>Developing REST APIS (Flask + Flask-Restful)</br>
+	      Using PostgreSQL as database engine</br>
+	      Developing tests with Pytest</br>
 Using GIT as control version.</p>
             </div>
             <div class="resume-date text-md-right">
